// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterableItem when the given filter is foo does not render the child if filter does not match the text 1`] = `
<FilterableItem
  text="bar"
/>
`;

exports[`FilterableItem when the given filter is foo does render the child if filter does matches the text 1`] = `
<FilterableItem
  text="foo"
>
  foo
</FilterableItem>
`;

exports[`FilterableItem when the given filter is foo for a customFilter which expects exactly foo does not render the child when the text is not exactly foo 1`] = `
<FilterableItem
  text="food"
/>
`;

exports[`FilterableItem when the given filter is foo for a customFilter which expects exactly foo renders the child when the text is exactly foo 1`] = `
<FilterableItem
  text="foo"
>
  foo
</FilterableItem>
`;

exports[`FilterableItem when the given filter is foo for a filterType such as startsWith does not render the child if the text does not start with foo 1`] = `
<FilterableItem
  text="barfoo"
/>
`;

exports[`FilterableItem when the given filter is foo for a filterType such as startsWith renders the child if the text starts with foo 1`] = `
<FilterableItem
  text="foobar"
>
  foobar
</FilterableItem>
`;

exports[`FilterableItem when the given filter is foo renders children instead of text if provided 1`] = `
<FilterableItem
  text="foo"
>
  <div>
    custom children
  </div>
</FilterableItem>
`;
